--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <a id="waihaolaoxugithubio" class="anchor" href="#waihaolaoxugithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>waihaolaoxu.github.io</h1>
 
 <p>老徐的博客</p>
+<p>老徐的博客</p>
+
 
       <footer class="site-footer">
 
